--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="sidebar"></div>
-    <script src="sidebar.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
