Changed populateDatabase.js to provide actual links to preview video images. Added many styles.

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="sidebar"></div>
-    <script src="https://charlotte-badger-sidebar.s3-us-west-1.amazonaws.com/sidebar.js"></script>
+    <!-- <script src="https://charlotte-badger-sidebar.s3-us-west-1.amazonaws.com/sidebar.js"></script> -->
   </body>
 </html>
