--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,10 @@
   </head>
   <body>
     <div id="sidebar"></div>
-    <!-- <script src="https://charlotte-badger-sidebar.s3-us-west-1.amazonaws.com/sidebar.js"></script> -->
+    <script crossorigin src="https://unpkg.com/react@17/umd/react.production.min.js"></script>
+    <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/uuid/8.3.2/uuid.min.js" integrity="sha512-UNM1njAgOFUa74Z0bADwAq8gbTcqZC8Ej4xPSzpnh0l6KMevwvkBvbldF9uR++qKeJ+MOZHRjV1HZjoRvjDfNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/luxon/1.27.0/luxon.js" integrity="sha512-yDz59zKFcCyBjgxM8JJNp9S/5ffEKIghptyjTEpRxCHDENo44sBtzcywEHoM2Wc3zyf/GrnpDfH3WVfJ1t7iuA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.js" integrity="sha512-otOZr2EcknK9a5aa3BbMR9XOjYKtxxscwyRHN6zmdXuRfJ5uApkHB7cz1laWk2g8RKLzV9qv/fl3RPwfCuoxHQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   </body>
 </html>
